# lgi

./: CMakeLists.txt  Doxyfile  LliurexLGIConfig.cmake  lgi-1.0-amd64.pc  lgi-1.0-i386.pc
debian/: changelog  control  liblgi-1.0-dev.dirs  liblgi-1.0-dev.install  liblgi-1.0-doc.dirs  liblgi-1.0-doc.install  liblgi-1.0.install  rules
demos/: CMakeLists.txt  demo1.cpp
include/lgi-1.0/: application.hpp  cursor.hpp  events.hpp  exceptions.hpp  fbwindow.hpp  layer.hpp  lgi.hpp  message.hpp  utils.hpp  widget.hpp  window.hpp  x11window.hpp
src/: CMakeLists.txt  application.cpp  events.cpp  exceptions.cpp  fbwindow.cpp  layer.cpp  message.cpp  utils.cpp  widget.cpp  x11window.cpp
